# IE-pipeline

./: .gitignore  README.md  act_classification_experiment.py  act_classification_fine_tune.py  pyproject.toml
documents/phase_1/: JUPYTER_IMPLEMENTATION_PLAN.md  MODEL_SELECTION.md  MRDA_LABEL_ANALYSIS.md  PROJECT_APPROACH.md
notebooks/: MRDA_finetuning.ipynb  MRDA_llm_classifier.ipynb  MRDA_load.ipynb
notebooks/results/no_1_20250826_145318/: evaluation.json  hyperparams.json
notebooks/results/no_1_20250826_164518/: evaluation.json  hyperparams.json
