[project]
name = "ie-pipeline"
version = "0.1.0"
description = "Modular Information Extraction pipeline for converting meeting transcripts to knowledge graph triples"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Filip Kozlowski"}
]
keywords = ["information-extraction", "knowledge-graph", "nlp", "meeting-analysis", "transformers"]
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "peft>=0.5.0",
    "accelerate>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
]


